--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #011627; 
   color: white;
   overflow-x: hidden;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* Body background for About, Portfolio & Contact */
